# IoT_Gateway

./: CMakeLists.txt  README.md
include/: MqttManager.hpp  NetworkUtils.hpp  ThreadSafeQueue.hpp
include/LED/: LEDController.hpp
include/network/: MqttManager.hpp  NetworkUtils.hpp
include/sensor/: BME280.hpp  ENS160.hpp  MCP3008.hpp
include/thread/: SensorDTO.hpp  SensorReader.hpp  ThreadSafeQueue.hpp
src/: MqttManager.cpp  NetworkUtils.cpp  main.cpp
src/LED/: LEDController.cpp
src/network/: MqttManager.cpp
src/sensor/: BME280.cpp  ENS160.cpp  MCP3008.cpp
src/thread/: SensorReader.cpp
